[tool.poetry]
name = "print-kit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "print_kit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.7"
tox = "^4.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
